cabal-version:       >=1.10
name:                apecs-test
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Onizudo
maintainer:          barbafh@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

executable apecs-test
  main-is:             Main.hs
  other-modules:       Engine.Particles
                       Engine.Components
                       Engine.Tilemap
                       Engine.Constants
                       Engine.Villagers
                       Engine.Utils
                       Engine.DataTypes
                       Engine.Collisions
                       Engine.Input
                       Engine.Draw
                       Engine.Buildings
                       Engine.Text
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
					  ,linear
					  ,apecs
					  ,apecs-gloss
                      ,apecs-physics
					  ,gloss
                      ,gloss-juicy
                      ,random
                      ,GLUT
  -- hs-source-dirs:
  default-language:    Haskell2010
